[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = "4.1.8"
http-serde = "1.1.2"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
similar = "2.2.1"
tokio = { version = "1.26.0", features = ["fs"] }
url = { version = "2.3.1", features = ["serde"] }
