[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.3"
http = "0.2.9"
http-serde = "1.1.2"
reqwest = {version = "0.11.14", default-features = false, features = ["rustls-tls"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.19"
similar = { version = "2.2.1", features = ["inline"] }
tokio = { version = "1.26.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
